--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -7,11 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
       - uses: jannekem/run-python-script-action@v1
+      - uses: actions/setup-python@v3
         with:
+          python-version: "3.8"
           script: |
             import os
             print("Directory contents:")
             for f in os.listdir():
                 print(f)
+      - name: Code check
+        run: |
+            python3 $(git ls-files '*.py')
