--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install Python dependencies
         uses: py-actions/py-dependency-install@v3
         with:
-          path: git ls-tree -r --name-only requirements.txt
+          path: $(git ls-tree -r --name-only requirements.txt)
       - name: Code check
         run: |
             python3 $(git ls-files '*.py')
